# cfuture

./: .gitignore  CHANGELOG.md  LICENSE  cfuture.cabal
csrc/: CFuture.c
include/: CFuture.h
src/Control/Concurrent/: CFuture.hs
test/: HsTestCase.hs  OurTasks.hs  main.c
